1.Repair the "user drag invalid" problem. 2.User layout from Table to Float. 3.Ajax update to module_content. 4.Set user drag cursor.

--- a/branches/sso/of/of/app/views/projects/_roles_users_selection.html.erb
+++ b/branches/sso/of/of/app/views/projects/_roles_users_selection.html.erb
@@ -1,3 +1,1 @@
- <center>
-   <%= user_portrait_link( user,:with_login => true, :link => false) %>    
-</center>
+<%= user_portrait_link( user, :with_login => true, :link => false, :float => 'left') %>    
