--- a/branches/sso/of/of/app/views/partials/_project_logo.html.erb
+++ b/branches/sso/of/of/app/views/partials/_project_logo.html.erb
@@ -1,9 +1,10 @@
 <% module_content = capture do -%>
-  <div class="project_logo_border">
-    <div id='project_logo'>
+  <div id='project_logo'>
+    <center>
       <a href="<%= url_for(:controller => 'projects', :action => 'show', :id => @project.id) %>">
         <img src="<%= url_for(:controller => :images, :action => "cached_image", :id => @project.icon) %>"/>
       </a>
+      </center>
     </div>
     <br/>
       <%if current_user.has_role?('Admin',Project.find_by_id(params["project_id"]))%>
@@ -13,7 +14,6 @@
         </a>
       </span>
       <%end%>
-  </div>
   <%= render :partial => 'images/edit', :locals =>
     {:image_id => @project.icon, :id => @project.id, :type => 'Project', :back_to => project_path(@project) } %>
 <% end -%>
