change css link

--- a/branches/sso/of/of/app/views/layouts/integration.html.erb
+++ b/branches/sso/of/of/app/views/layouts/integration.html.erb
@@ -8,35 +8,35 @@
     <meta name="author" content="ossf"/>
     <meta name="description" content="." />
 
-    <link rel="stylesheet" href="/components/com_gantry/css/gantry.css" type="text/css" />
+    <link rel="stylesheet" href="http://<%=UI_SCHEMA_CSS_HOST%>/components/com_gantry/css/gantry.css" type="text/css" />
     <!--[if lte IE 6]>
-    <link rel="stylesheet" href="/templates/rt_quantive_j15/css/light-body-ie6.css" type="text/css" />
-    <link rel="stylesheet" href="/components/com_gantry/css/gantry-ie6.css" type="text/css" />
+    <link rel="stylesheet" href="http://<%=UI_SCHEMA_CSS_HOST%>/templates/rt_quantive_j15/css/light-body-ie6.css" type="text/css" />
+    <link rel="stylesheet" href="http://<%=UI_SCHEMA_CSS_HOST%>/components/com_gantry/css/gantry-ie6.css" type="text/css" />
     <![endif]-->
-    <link rel="stylesheet" href="/components/com_gantry/css/grid-12.css" type="text/css" />
-    <link rel="stylesheet" href="/components/com_gantry/css/joomla.css" type="text/css" />
+    <link rel="stylesheet" href="http://<%=UI_SCHEMA_CSS_HOST%>/components/com_gantry/css/grid-12.css" type="text/css" />
+    <link rel="stylesheet" href="http://<%=UI_SCHEMA_CSS_HOST%>/components/com_gantry/css/joomla.css" type="text/css" />
     <!--[if lte IE 6]>
-    <link rel="stylesheet" href="/components/com_gantry/css/joomla-ie6.css" type="text/css" />
+    <link rel="stylesheet" href="http://<%=UI_SCHEMA_CSS_HOST%>/components/com_gantry/css/joomla-ie6.css" type="text/css" />
     <![endif]-->
-    <link rel="stylesheet" href="/templates/rt_quantive_j15/css/joomla.css" type="text/css" />
+    <link rel="stylesheet" href="http://<%=UI_SCHEMA_CSS_HOST%>/templates/rt_quantive_j15/css/joomla.css" type="text/css" />
     <!--[if lte IE 6]>
-    <link rel="stylesheet" href="/templates/rt_quantive_j15/css/suckerfish.css" type="text/css" />
+    <link rel="stylesheet" href="http://<%=UI_SCHEMA_CSS_HOST%>/templates/rt_quantive_j15/css/suckerfish.css" type="text/css" />
     <![endif]-->
-    <link rel="stylesheet" href="/templates/rt_quantive_j15/css/style1.css" type="text/css" />
+    <link rel="stylesheet" href="http://<%=UI_SCHEMA_CSS_HOST%>/templates/rt_quantive_j15/css/style1.css" type="text/css" />
 
-    <link rel="stylesheet" href="/templates/rt_quantive_j15/css/light-body.css" type="text/css" />
-    <link rel="stylesheet" href="/templates/rt_quantive_j15/css/template.css" type="text/css" />
+    <link rel="stylesheet" href="http://<%=UI_SCHEMA_CSS_HOST%>/templates/rt_quantive_j15/css/light-body.css" type="text/css" />
+    <link rel="stylesheet" href="http://<%=UI_SCHEMA_CSS_HOST%>/templates/rt_quantive_j15/css/template.css" type="text/css" />
     <!--[if lte IE 6]>
-    <link rel="stylesheet" href="/templates/rt_quantive_j15/css/template-ie6.css" type="text/css" />
+    <link rel="stylesheet" href="http://<%=UI_SCHEMA_CSS_HOST%>/templates/rt_quantive_j15/css/template-ie6.css" type="text/css" />
     <![endif]-->
-    <link rel="stylesheet" href="/templates/rt_quantive_j15/css/typography.css" type="text/css" />
+    <link rel="stylesheet" href="http://<%=UI_SCHEMA_CSS_HOST%>/templates/rt_quantive_j15/css/typography.css" type="text/css" />
     <!--[if lte IE 7]>
-    <link rel="stylesheet" href="/templates/rt_quantive_j15/css/joomla-ie7.css" type="text/css" />
-    <link rel="stylesheet" href="/templates/rt_quantive_j15/css/template-ie7.css" type="text/css" />
+    <link rel="stylesheet" href="http://<%=UI_SCHEMA_CSS_HOST%>/templates/rt_quantive_j15/css/joomla-ie7.css" type="text/css" />
+    <link rel="stylesheet" href="http://<%=UI_SCHEMA_CSS_HOST%>/templates/rt_quantive_j15/css/template-ie7.css" type="text/css" />
     <![endif]-->
-    <link rel="stylesheet" href="/templates/rt_quantive_j15/css/fusionmenu.css" type="text/css" />
+    <link rel="stylesheet" href="http://<%=UI_SCHEMA_CSS_HOST%>/templates/rt_quantive_j15/css/fusionmenu.css" type="text/css" />
     <%= yield :head_content %>
-    <script type="text/javascript" src="/modules/mod_ofssologin/js/ofssologin.js"></script>
+    <script type="text/javascript" src="http://<%=UI_SCHEMA_CSS_HOST%>/modules/mod_ofssologin/js/ofssologin.js"></script>
     <script type="text/javascript" src="/sso/javascripts/langsync.js"></script>
   </head>
 
