--- a/branches/sso/of/of/app/views/partials/_login.html.erb
+++ b/branches/sso/of/of/app/views/partials/_login.html.erb
@@ -1,13 +1,13 @@
 <% if(login?) -%>
-  <%# = lightbox_link_to "Link Name", url_for(:controller => :images, :action => "image", :id => current_user.icon) %> 
-  <%# = lightbox_image_tag(url_for(:controller => :images, :action => "image", :id => current_user.icon, :size => 24), url_for(:controller => :images, :action => "image", :id => current_user.icon), {:class=>"images"}, :title => "This is a test!") %>
-  <%= user_portrait_link current_user,:size => 24, :align => :middle %>
-  <%= link_to current_user.login, :controller => :user, :action => :home %>
-  &nbsp; | &nbsp; 
+  <%=_('Hi')%>,<%= link_to current_user.login, '/user/userprofile' %>
+  &nbsp;|&nbsp; 
+  <%= link_to _('Dashboard'), '/of/user/dashboard' %>
+  &nbsp;|&nbsp; 
+  <%= link_to _('Settings'), '/sso/user/edit' %>
+  &nbsp;|&nbsp; 
   <%= link_to _("Logout"), :controller => :user, :action => :logout %>
 <% else -%>
   <%= link_to _('Login'), :controller => :user, :action => :login %>
-  &nbsp; | &nbsp;
-  <%#= link_to _('Sign Up'), :controller => :user, :action => :signup %> 
-  <%= link_to _('Sign Up'), "http://ssodev.openfoundry.org/sso/user/signup" %> 
+  &nbsp;|&nbsp; 
+  <%= link_to _('Sign Up'), "/sso/user/signup" %> 
 <% end -%>
