--- a/branches/sso/of/of/app/views/user/_myissues.html.erb
+++ b/branches/sso/of/of/app/views/user/_myissues.html.erb
@@ -1,5 +1,5 @@
 <% module_title = capture do -%>
-<%= _('Recently Issue') %>
+<%=_( 'menu_My Tickets' ) %>
 <div class="module-function">
   <form action="dashboard">
     <%=select_tag( 'lookfor', options_for_select( allrtoptions, "#{ params[ 'lookfor' ] }" ), :onchange => "this.form.submit();" ) %>
@@ -8,8 +8,9 @@
 </div>
 <%end%>
 
+<a id="mytickets"></a>
 <% module_content = capture do -%>
-<% if not rss.nil? %>
+<% if not rss.items.blank? %>
     <table>
       <% rss.items.each do | item | %>
         <tr><td><a href='<%=item.link %>'><%=item.title %></a></td></tr>
@@ -24,7 +25,7 @@
       <% end %>
     </table>
   <% else %>
-    no data 
+    Sorry, there is no data for your request.
   <% end %>
 <% end %>
 
