--- a/branches/sso/of/of/app/views/partials/_home_menu.html.erb
+++ b/branches/sso/of/of/app/views/partials/_home_menu.html.erb
@@ -24,6 +24,9 @@
   <li><%= link_to _('menu_Top Downloads'), :controller => 'releases', :action => 'top' %></li>
   <li><%= link_to _('menu_Help Wanted'), :controller => 'jobs' %></li>
   <li ><%= link_to _('menu_WebHosting'), :controller => 'webhosting' %></li>
+    <ul>
+      <li ><%= link_to _('How to Upload?'), :controller => 'webhosting', :action => 'how_to_upload' %></li>
+    </ul>
 </ul>
 <% end -%>
 
