--- a/branches/sso/of/of/app/views/site_admin/site_admin/_switch_user_selection.html.erb
+++ b/branches/sso/of/of/app/views/site_admin/site_admin/_switch_user_selection.html.erb
@@ -1,3 +1,3 @@
  <center>
- <%= user_portrait_link( user,:with_login => true, :link => "/site_admin/site_admin/switch_user?id=#{user.id}") %>    
+ <%= user_portrait_link( user,:with_login => true, :link => "#{root_path}site_admin/site_admin/switch_user?id=#{user.id}") %>    
 </center>
