--- a/branches/sso/of/of/app/views/layouts/application.html.erb
+++ b/branches/sso/of/of/app/views/layouts/application.html.erb
@@ -36,25 +36,36 @@
 <% content_for :body_content do -%>
 <div id="of-body">
   <div id="MiddlePane">
+    <div class="rt-grid-12">
+
+      <%if params["project_id"] != nil%>
+       <div class="pj_logo" >
+          <a href="<%= url_for(:controller => 'projects', :action => 'show', :id => @project.id) %>">
+            <img src="<%= url_for(:controller => :images, :action => "cached_image", :id => @project.icon) %>" style="vertical-align: middle;" width=64 />
+          </a>
+       </div>
+       <div class="pj_title" >
+          <h3>
+            <%= h(@project.summary) %>
+          </h3>
+        <%if current_user.has_role?('Admin',Project.find_by_id(params["project_id"]))%>
+          <%= image_tag "green_arrow_right.gif" %>
+          <a href="#" onclick="Effect.toggle('UploadImage','appear'); return false"><%=_('Change Icon')%></a>
+        <%end%>
+          <%= render :partial => 'images/edit', :locals =>
+          {:image_id => @project.icon, :id => @project.id, :type => 'Project', :back_to => project_path(@project) } %>
+       </div>
+      <%end%>
+
+    </div>
+
     <div id="MainContent" class="rt-grid-9 rt-push-3">
       <div id="Flash"><%= show_flash %></div>
-      <%if params["project_id"] != nil%>
-        <table>
-          <tr><td>
-            <h3>
-            <a href="<%= url_for(:controller => 'projects', :action => 'show', :id => @project.id) %>">
-              <img src="<%= url_for(:controller => :images, :action => "cached_image", :id => @project.icon) %>" width="25" />
-            </a>
-            <%= h(@project.summary) %>
-            </h3>
-          </td></tr>
-        </table>
-      <%end%>
       <%= yield :layout %>
     </div>
     <div id="LeftWidget" class="rt-grid-3 rt-pull-9">   
     	<%if params["project_id"] != nil%>
-          <%=render :partial => "partials/project_logo", :locals => {:project => @project}%>
+          <%#=render :partial => "partials/project_logo", :locals => {:project => @project}%>
         <div id="LeftMenu">
           <%=render :partial => "partials/project_menu", :locals => {:project => @project}%>
         </div>
