--- a/branches/sso/of/of/app/views/projects/show.html.erb
+++ b/branches/sso/of/of/app/views/projects/show.html.erb
@@ -1,3 +1,7 @@
+<%
+  functions = Function::functions(:authorizable_id => params["project_id"].to_i, :user_id => current_user.id)
+  is_nsc_project = @project.is_nsc_project
+%>
 <% module_title = capture do %>
   <%=_('Basic Information') %>
 <% end %>
@@ -6,16 +10,18 @@
 <% end %>
 <%= render :file => 'layouts/rt_module', :locals => {:module_title => module_title, :module_content => module_content, :variation => 'square1'} %>
 
+<% if functions.length == 0 -%>
 <table>
   <tr>
     <td>
       <%= link_to "<span>#{_('Downloads')}</span>", download1_path(:project_id => @project.id), :class => 'readon' %>
     </td>
     <td>
-      <%= link_to "<span>#{_('project_Tracker')}</span>", rt_path(:project_id => @project.id), :class => 'readon' %>
+      <%= link_to "<span>#{_('Bug Report')}</span>", rt_path(:project_id => @project.id), :class => 'readon' %>
     </td>
   </tr>
 </table>
+<% end -%>
 
 <% module_title = capture do %>
   <%=_( 'Project Issues' ) %>
