--- a/branches/sso/of/of/app/views/user/_myprojects.html.erb
+++ b/branches/sso/of/of/app/views/user/_myprojects.html.erb
@@ -19,13 +19,13 @@
 
         <tr>
           <td colspan="2">
-            <span class="mp_button"><a href="<%="/of/projects/#{ p.id }/rt" %>">Issue Tracker</a></span>
-            <span class="mp_button"><a href="<%="/of/projects/#{ p.id }/kwiki" %>">Wiki</a></span>
-            <span class="mp_button"><a href="<%="/of/projects/#{ p.id }/download" %>">Release</a></span>
-            <span class="mp_button"><a href="<%="/of/projects/#{ p.id }/member_edit" %>">Member</a></span>
-            <span class="mp_button"><a href="<%="/of/projects/#{ p.id }/permission_edit/" %>">Permission</a></span>
-            <span class="mp_button"><a href="<%="/of/projects/#{ p.id }/viewvc" %>">Version Control</a></span>
-            <span class="mp_button"><a href="<%="/of/projects/#{ p.id }/survey" %>">Surveys</a></span>
+            <span class="mp_button"><a href="<%="#{ root_path }projects/#{ p.id }/rt" %>">Issue Tracker</a></span>
+            <span class="mp_button"><a href="<%="#{ root_path }projects/#{ p.id }/kwiki" %>">Wiki</a></span>
+            <span class="mp_button"><a href="<%="#{ root_path }projects/#{ p.id }/download" %>">Release</a></span>
+            <span class="mp_button"><a href="<%="#{ root_path }projects/#{ p.id }/member_edit" %>">Member</a></span>
+            <span class="mp_button"><a href="<%="#{ root_path }projects/#{ p.id }/permission_edit/" %>">Permission</a></span>
+            <span class="mp_button"><a href="<%="#{ root_path }projects/#{ p.id }/viewvc" %>">Version Control</a></span>
+            <span class="mp_button"><a href="<%="#{ root_path }projects/#{ p.id }/survey" %>">Surveys</a></span>
           </td>
         </tr>
 
