--- a/of/app/views/partials/_login.rhtml
+++ b/of/app/views/partials/_login.rhtml
@@ -2,9 +2,9 @@
   <%# = lightbox_link_to "Link Name", url_for(:controller => :images, :action => "image", :id => current_user.icon) %> 
   <%# = lightbox_image_tag(url_for(:controller => :images, :action => "image", :id => current_user.icon, :size => 24), url_for(:controller => :images, :action => "image", :id => current_user.icon), {:class=>"images"}, :title => "This is a test!") %>
   <%= user_portrait_link current_user,:size => 24, :align => :middle %>
-  <%= link_to current_user.login, :controller => :user, :action => :home %>
+  <%= link_to current_user.login, url_for( OPENFOUNDRY_OF_URL + '/user/home' ) %>
   &nbsp; | &nbsp; 
-  <%= link_to _("Logout"), :controller => :user, :action => :logout %>
+  <%= link_to _("Logout"), url_for( OPENFOUNDRY_OF_URL + '/user/logout' ) %>
 <% else -%>
   <%= link_to _('Login'), :controller => :user, :action => :login %>
   &nbsp; | &nbsp;
