--- a/branches/sso/of/of/app/views/partials/_home_menu.html.erb
+++ b/branches/sso/of/of/app/views/partials/_home_menu.html.erb
@@ -1,32 +1,30 @@
 <% module_title = capture do -%>
-<%= _('Projects Menu') %>
+<%#= _('Projects Menu') %>
 <% end -%>
 
 <% module_content = capture do -%>
 <ul class="menu">
-  <li><%= link_to _('Create Project'), new_project_path() %></li>
   <% if current_user.login != 'guest' -%>
-  <li class="parent active item19">
-    <span><%= link_to _('Personal') %></span>
-    <ul>
-    <li id="current" class="active item20"><span><%= link_to _('menu_My Projects'), "#{ root_path }user/dashboard#myprojects"%></span></li>
-    <li><%= link_to _('menu_My Tickets'), "#{ root_path }user/dashboard#mytickets" %></li>
-    <li><%= link_to _('menu_My Messages'), "/#{ I18n.locale.to_s[ -2..-1 ].downcase }/my-message"%></li>
-    </ul>
-  </li>
+    <li><%= link_to _('Create Project'), new_project_path() %></li>
+    <li><%= link_to _('Dashboard'), "#{ root_path }user/dashboard" %></li>
   <% end -%>
-  <li><%= link_to _('menu_License Wizard'), '/index.php?option=com_content&view=article&id=134&Itemid=19&lang=tw' %></li>
-  <li><%= link_to _('Forum'), '/forum.html?func=showcat&catid=48' %></li>
   <li><%= link_to _('menu_Project Listing'), :controller => 'projects' %></li>
   <li><%= link_to _('menu_Project Category'), :controller => 'category'  %></li>
   <li><%= link_to _('menu_Project News'), project_news_path() %></li>
   <li><%= link_to _('menu_Latest Releases'), :controller => 'releases', :action => 'latest' %></li>
   <li><%= link_to _('menu_Top Downloads'), :controller => 'releases', :action => 'top' %></li>
   <li><%= link_to _('menu_Help Wanted'), :controller => 'jobs' %></li>
-  <li ><%= link_to _('menu_WebHosting'), :controller => 'webhosting' %></li>
-    <ul>
-      <li ><%= link_to _('How to Upload?'), :controller => 'webhosting', :action => 'how_to_upload' %></li>
-    </ul>
+  <li><%= link_to _('menu_WebHosting'), :controller => 'webhosting' %></li>
+  <li class="parent active"><a href='#' onClick="Effect.toggle('bsc_menu0', 'blind', {duration: 0.3}); return false"><%= _('Help') %></a>
+  <div id="bsc_menu0" style="display:none">
+  <ul>
+    <li><%= link_to 'OpenFoundry', "#{ root_path }help" %></li>
+    <li><%= link_to _('NSC Project'), "#{ root_path }help/nsc_project" %></li>
+    <li><%= link_to _('menu_License Wizard'), '/index.php?option=com_content&view=article&id=134&Itemid=19&lang=tw' %></li>
+    <li><%= link_to _('Forum'), '/forum.html?func=showcat&catid=48' %></li>
+  </ul>
+  </div>
+  </li>
 </ul>
 <% end -%>
 
