--- a/branches/sso/of/of/app/views/project_notify/applied_site_admin.html.erb
+++ b/branches/sso/of/of/app/views/project_notify/applied_site_admin.html.erb
@@ -1,7 +1,9 @@
-Dear site administrator:
-
-Please approve or reject the project creation request:
-
-<%= @status_change_url %>
-
-OpenFoundry System
+<p>
+Dear site administrator:<br />
+<br />
+Please approve or reject the project creation request:<br />
+<br />
+<%= @status_change_url %><br />
+<br />
+OpenFoundry System<br />
+</p>
