--- a/branches/sso/of/of/app/views/project_notify/approved.html.erb
+++ b/branches/sso/of/of/app/views/project_notify/approved.html.erb
@@ -1,12 +1,13 @@
-Your project has been created!
-Please visit the following URL: <%= @project_url %>
-
+<p>
+Your project has been created!< br />
+Please visit the following URL: <%= @project_url %><br />
+<br />
 <% if @replymessage != "" -%>
------------------------------------------------------------------------------------
-
-<%= @replymessage %>
-
------------------------------------------------------------------------------------
+-----------------------------------------------------------------------------------<br />
+<br />
+<%= @replymessage %><br />
+<br />
+-----------------------------------------------------------------------------------<br />
 <% end -%>
-
-OpenFoundry
+<br />
+OpenFoundry<br />
