--- a/branches/sso/of/of/app/views/project_notify/rejected.html.erb
+++ b/branches/sso/of/of/app/views/project_notify/rejected.html.erb
@@ -1,14 +1,16 @@
-Your project creation request "<%= @project_name %>" has been rejected!
-If you have any question, please contact us at <%= OPENFOUNDRY_SITE_ADMIN_EMAIL %>.
-
+<p>
+Your project creation request "<%= @project_name %>" has been rejected!<br />
+If you have any question, please contact us at <%= OPENFOUNDRY_SITE_ADMIN_EMAIL %>.<br />
+<br />
 <% if @replymessage != "" -%>
------------------------------------------------------------------------------------
-
-<%= @replymessage %>
-
------------------------------------------------------------------------------------
+-----------------------------------------------------------------------------------<br />
+<br />
+<%= @replymessage %><br />
+<br />
+-----------------------------------------------------------------------------------<br />
 <% end -%>
-
-Thank you.
-
-OpenFoundry
+<br />
+Thank you.<br />
+<br />
+OpenFoundry<br />
+</p>
