--- a/branches/sso/of/of/app/views/user_notify/change_password.html.erb
+++ b/branches/sso/of/of/app/views/user_notify/change_password.html.erb
@@ -1,10 +1,16 @@
-Dear <%= @name %>,
+<p>
+Dear <%= @name %>,<br />
+<br />
+At your request, <%= @app_name %> has changed your password. If it was not at your request, then you should be aware that someone has access to your account and requested this change.<br />
+<br />
+Your new login credentials are:<br />
+<br />
+login:    <%= @login %><br />
+password: <%= @password %><br />
+<br />
+Or click:<br />
+<br />
+<a href="<%= @url%>"><%= @url %></a><br />
+<br />
+</p>
 
-At your request, <%= @app_name %> has changed your password. If it was not at your request, then you should be aware that someone has access to your account and requested this change.
-
-Your new login credentials are:
-
-  login:    <%= @login %>
-  password: <%= @password %>
- 
-<%= @url %>
