--- a/branches/sso/of/of/app/views/user_notify/forgot_password.html.erb
+++ b/branches/sso/of/of/app/views/user_notify/forgot_password.html.erb
@@ -1,11 +1,17 @@
-Dear <%= @name %>,
+<p>
+Dear <%= @name %>,<br />
+<br />
+At your request, <%= @app_name %> has sent you the following URL so that you may reset your password. If it was not at your request, then you should be aware that someone has entered your email address as theirs in the forgotten password section of <%= @app_name %>.<br />
+<br />
+Please click on the following link to go to the change password page:<br />
+<br />
+<a href="<%= @url%>">Click Me!</a><br />
+<br />
+It's advisable for you to change your password as soon as you login. It's as simple as navigating to 'Preferences' and clicking on 'Change Password'.<br />  
+<br />
+Or click:<br />
+<br />
+<a href="<%= @url%>"><%= @url %></a><br />
+<br />
+</p>
 
-At your request, <%= @app_name %> has sent you the following URL so that you may reset your password. If it was not at your request, then you should be aware that someone has entered your email address as theirs in the forgotten password section of <%= @app_name %>.
-
-Please click on the following link to go to the change password page:
-
-<a href="<%= @url%>">Click me!</a>
- 
-It's advisable for you to change your password as soon as you login. It's as simple as navigating to 'Preferences' and clicking on 'Change Password'.
-
-<%= @url %>
