--- a/branches/sso/of/of/app/views/site_admin/projects/list.html.erb
+++ b/branches/sso/of/of/app/views/site_admin/projects/list.html.erb
@@ -22,11 +22,11 @@ project_columns = ["name","summary","description","creator","status","statusreas
 <% for project in @projects %>
     <tr>
     
-      <td><%= link_to _('Show'), {:action => 'show', :controller => '../projects', :id => project}, :target => '_blank' %></td>
-      <td><%= link_to _('Edit'), {:action => 'edit', :controller => '../projects', :id => project}, :target => '_blank' %></td>
+      <td><%= link_to _('Show'), site_admin_project_path( :id => project), :target => '_blank' %></td>
+      <td><%= link_to _('Edit'), edit_site_admin_project_path( :id => project), :target => '_blank' %></td>
       <td>
         <% if project.status != Project::STATUS[:REJECTED] %>
-          <%= link_to _('Change status'), {:action => 'change_status_form', :id => project.id}, :target => '_blank' %>
+          <%= link_to _('Change status'), change_status_form_site_admin_project_path( :id => project.id), :target => '_blank' %>
         <% end %>
       </td>
       <% for column in project_columns %>
