Add more description to explian CVS ls supported version

--- a/branches/sso/of/of/app/views/help/vcs.html.erb
+++ b/branches/sso/of/of/app/views/help/vcs.html.erb
@@ -640,7 +640,7 @@ svn export file:///tmp/repos/test release_project<br>
 </p>
 <p style=FONT-FAMILY:Arial>
   <br>
-  透過cvs指令 list ( 簡寫: ls ) 檢視鑄造場cvs檔案庫
+  透過cvs指令 list ( 簡寫: ls ) 檢視鑄造場cvs檔案庫 (僅支援相容 CVSNT 指令的版本)
 </p>
 <p style=FONT-FAMILY:Arial>
   注意: 帳號"cvs"為匿名帳號。
