--- a/branches/sso/of/of/config/initializers/openfoundry.rb.erb
+++ b/branches/sso/of/of/config/initializers/openfoundry.rb.erb
@@ -1,18 +1,20 @@
 # For Project Upload
-OPENFOUNDRY_PROJECT_UPLOAD_PATH = '/usr/upload'
+OPENFOUNDRY_PROJECT_UPLOAD_PATH = '<%=projects_upload_path%>'
 
 # TODO: better naming
-OPENFOUNDRY_SITE_ADMIN_EMAIL = 'contact@openfoundry.org'
+
+site_path='<%=host%>'
+OPENFOUNDRY_SITE_ADMIN_EMAIL = '<%=site_admin_mail%>'
 OPENFOUNDRY_SITEMAIL_BATCH_MAX = 500
 OPENFOUNDRY_SESSION_EXPIRES_AFTER = 8 * 60 * 60 # in seconds
-OPENFOUNDRY_VIEWVC_SVN_URL =  'http://<%=host%>/viewvc-svn/'
-OPENFOUNDRY_VIEWVC_CVS_URL =  'http://<%=host%>/viewvc-cvs/'
-OPENFOUNDRY_OF_URL = 'http://<%=host%>'
-OPENFOUNDRY_RT_URL = 'http://<%=host%>/rt/'
-OPENFOUNDRY_SYMPA_URL = 'http://<%=host%>/sympa/'
-OPENFOUNDRY_KWIKI_URL = 'http://<%=host%>/kwiki/'
-OPENFOUNDRY_HOMEPAGE_URL = 'http://%s.openfoundry.org'
-OPENFOUNDRY_FTP_URL = 'ftp://ftp.<%=host%>/'
+OPENFOUNDRY_VIEWVC_SVN_URL =  "http://#{site_path}/viewvc-svn/"
+OPENFOUNDRY_VIEWVC_CVS_URL =  "http://#{site_path}/viewvc-cvs/"
+OPENFOUNDRY_OF_URL = "http://#{site_path}"
+OPENFOUNDRY_RT_URL = "http://#{site_path}/rt/"
+OPENFOUNDRY_SYMPA_URL = "http://#{site_path}/sympa/"
+OPENFOUNDRY_KWIKI_URL = "http://#{site_path}/kwiki/"
+OPENFOUNDRY_HOMEPAGE_URL = "http://%s.openfoundry.org"
+OPENFOUNDRY_FTP_URL = "ftp://ftp.#{site_path}/"
 
 OPENFOUNDRY_SITE_ADMIN_RUN_CODE_PATH = "#{RAILS_ROOT}/tmp/run_code.rb"
 # an Enumerable object.  TODO: not only ports but also addresses ?
