Add 2 parameters for websvn

--- a/services/svn/openfoundry_svn.conf.tmpl
+++ b/services/svn/openfoundry_svn.conf.tmpl
@@ -11,6 +11,8 @@ SVN_HOST_NAME = "svn.openfoundry.org"
 SVN_URL_PREFIX = "/"
 VIEWVC_HOST_NAME = "of.openfoundry.org"
 VIEWVC_URL_PREFIX = "/viewvc-svn"
+WEBSVN_HOST_NAME = "websvn.of.openfoundry.org"
+WEBSVN_URL_PREFIX = "/websvn"
 
 DATA_IMPLEMENTATION = "openfoundry_json.rb"
 OPENFOUNDRY_JSON_URI = "a.json" # or an http://... URL
